src/objects/Chemical_Product_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To identify the bulk product (User Story-122127)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Chemical Product Type</label>
</CustomObject>